# mini_sesame

./: .gitignore  README.md  pyproject.toml
notebooks/: 06052022_1_basic_self_attention.ipynb
tests/: test_mini_sesame.py
